# Coust

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  frag.spv  generate_sln.bat  vert.spv  xmake.lua
Coust/: CMakeLists.txt
Coust/asset/test/: minimal.gltf  simple_meshes.gltf
Coust/shader/test/: minimal.frag  minimal.vert  tran_calc.comp
Coust/shaders/: mesh.h  mesh.vert.glsl  test.glsl  test.vert  test.vert.glsl  triangle.frag  triangle.vert
Coust/src/: Coust.h  pch.h
Coust/src/Coust/: Api.h  Application.cpp  Application.h  EntryPoint.h  FilePath.h  Input.cpp  KeyCode.h  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  Timer.h  Window.cpp  Window.h
Coust/src/Coust/Core/: Application.cpp  Application.h  EntryPoint.h  GlobalContext.cpp  GlobalContext.h  Input.cpp  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  Window.cpp  Window.h
Coust/src/Coust/Event/: ApplicationEvent.h  Event.cpp  Event.h  KeyEvent.h  MouseEvent.h
Coust/src/Coust/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Coust/src/Coust/Render/: Driver.cpp  Driver.h
Coust/src/Coust/Render/Resources/: Shader.cpp  Shader.h
Coust/src/Coust/Render/Vulkan/: ReFrigerator.cpp  Refrigerator.h  RenderTarget.cpp  RenderTarget.h  StagePool.cpp  StagePool.h  Vertex.cpp  Vertex.h  VmaBuild.cpp  VulkanCommand.cpp  VulkanCommand.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanContext.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDriver.cpp  VulkanDriver.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanMemory.cpp  VulkanMemory.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSampler.cpp  VulkanSampler.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanUtils.cpp  VulkanUtils.h
Coust/src/Coust/Renderer/: RenderBackend.cpp  RenderBackend.h  Renderer.cpp  Renderer.h  RendererBase.cpp  RendererBase.h
Coust/src/Coust/Renderer/RenderLayer/: RenderLayerBase.h
Coust/src/Coust/Renderer/Resources/: Shader.cpp  Shader.h
Coust/src/Coust/Renderer/Vulkan/: VolkBuild.cpp  VulkanBackend.cpp  VulkanBackend.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanStructs.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanUtils.cpp  VulkanUtils.h
Coust/src/Coust/Utils/: FilePath.cpp  FilePath.h  FileStream.cpp  FileStream.h  FileSystem.cpp  FileSystem.h  Hash.h  Macro.h  Memory.cpp  Memory.h  Random.cpp  Random.h
Coust/src/core/: Application.cpp  Application.h  EntryPoint.h  GlobalContext.cpp  GlobalContext.h  Logger.cpp  Logger.h  Memory.cpp  Memory.h  Window.cpp  Window.h
Coust/src/core/layers/: Layer.h  RenderLayer.cpp  RenderLayer.h
Coust/src/event/: ApplicationEvent.cpp  ApplicationEvent.h  Event.h  EventBus.h  KeyEvent.cpp  KeyEvent.h  MouseEvent.cpp  MouseEvent.h
Coust/src/render/: Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h
Coust/src/render/asset/: MeshConvertion.cpp  MeshConvertion.h  tinygltf_impl.cpp
Coust/src/render/camera/: FPSCamera.cpp  FPSCamera.h
Coust/src/render/vulkan/: StagePool.cpp  StagePool.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommand.cpp  VulkanCommand.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDescriptorCache.cpp  VulkanDescriptorCache.h  VulkanDriver.cpp  VulkanDriver.h  VulkanFBOCache.cpp  VulkanFBOCache.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanImage.cpp  VulkanImage.h  VulkanMaterial.cpp  VulkanMaterial.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineCache.cpp  VulkanPipelineCache.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderTarget.cpp  VulkanRenderTarget.h  VulkanSampler.cpp  VulkanSampler.h  VulkanShader.cpp  VulkanShader.h  VulkanShaderPool.cpp  VulkanShaderPool.h  VulkanStagePool.cpp  VulkanStagePool.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTransformation.cpp  VulkanTransformation.h  (+4 more)
Coust/src/render/vulkan/utils/: CacheSetting.cpp  CacheSetting.h  IncompleteVulkan.h  SpirVCompilation.cpp  SpirVCompilation.h  SpirVReflection.cpp  SpirVReflection.h  VulkanAllocation.h  VulkanAttachment.h  VulkanCheck.h  VulkanEnum2String.cpp  VulkanEnum2String.h  VulkanFormat.cpp  VulkanFormat.h  VulkanTagger.h  VulkanVersion.h
Coust/src/test/: RunTest.h  Test.cpp  Test.h  Test_AlignedStorage.cpp  Test_Events.cpp  Test_FileCache.cpp  Test_FreeListAllocator.cpp  Test_GlobalAllocation.cpp  Test_Logger_static.h  Test_MemoryPool.cpp  Test_MeshConvertion.cpp  Test_MonotonicAllocator.cpp  Test_NaiveSerialization.cpp  Test_PoolAllocator.cpp  Test_RobinHash.cpp  Test_SmartPointer.cpp  Test_StdAdapter_StdContainer.cpp  Test_allocators_GrowthPolicy.cpp  Test_containers_GrowthPolicy.cpp  doctest_impl.cpp
Coust/src/utils/: AlignedStorage.h  Assert.h  Compiler.h  Enums.h  Log.h  PtrMath.h  Span.h  TimeStep.cpp  TimeStep.h  TypeName.h
Coust/src/utils/allocators/: Allocator.h  Area.cpp  Area.h  Arena.h  FreeListAllocator.cpp  FreeListAllocator.h  GrowthPolicy.h  HeapAllocator.cpp  HeapAllocator.h  MemoryPool.cpp  MemoryPool.h  MonotonicAllocator.cpp  MonotonicAllocator.h  PoolAllocator.cpp  PoolAllocator.h  SmartPtr.h  StackAllocator.h  StlAdaptor.h  StlContainer.h  Track.h
Coust/src/utils/containers/: GrowthPolicy.h  RobinHash.h  RobinMap.h  RobinSet.h
Coust/src/utils/filesystem/: FileCache.cpp  FileCache.h  FileIO.cpp  FileIO.h  NaiveSerialization.h
Coust/src/utils/math/: BoundingBox.cpp  BoundingBox.h  Hash.h  NormalizedUInteger.h
Coustol/: CMakeLists.txt  Coustol.cpp
Roast/: RoastApp.cpp
Tool/: CompileAllShaders.py  GetCurrentDirectoryPath.py
vsxmake2022/: Coust.sln
vsxmake2022/Coust/: Coust.vcxproj  Coust.vcxproj.filters
vsxmake2022/Coustol/: Coustol.vcxproj  Coustol.vcxproj.filters
vsxmake2022/GLFW/: GLFW.vcxproj  GLFW.vcxproj.filters
vsxmake2022/Glad/: Glad.vcxproj  Glad.vcxproj.filters
vsxmake2022/Roast/: Roast.vcxproj  Roast.vcxproj.filters
vsxmake2022/imgui/: imgui.vcxproj  (+1 more)
